samples/_failures_safe/1761166828_351dde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c572e7a4.c: In function ‘main’:
./samples/SAFE/__tmp_c572e7a4.c:157:5: error: expected expression at end of input
  157 |     if (
      |     ^~
./samples/SAFE/__tmp_c572e7a4.c:157:5: error: expected declaration or statement at end of input
